--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -368,9 +368,16 @@
         <div class="card-secure-content">
           <div class="usa-grid-full">
             <div class="usa-width-one-half">
-              <strong>Contractor Information</strong>
+              <strong>Contractor Awarded</strong>
               <ul class="usa-label-list">
-                <li><span>DUNS</span> <span>{{element.data?.award?.awardee?.duns}}</span></li>
+                <li><span>DUNS</span> 
+                  <span>
+                    {{element.data?.award?.awardee?.duns}}
+                    <ng-container *ngIf="!element.data?.award?.awardee?.duns">
+                      &mdash;
+                    </ng-container>
+                  </span>
+                </li>
                 <li>
                   <span>Address</span>
                   <span>
@@ -400,11 +407,18 @@
               
             </div>
             <div class="usa-width-one-half">
-              <strong>Contract Information</strong>
+              <strong>Contract Award</strong>
               <ul class="usa-label-list">
                 <li><span>Amount</span> <span><i class="fa fa-usd" aria-hidden="true"></i> {{element.data?.award?.amount}}</span></li>
                 <li><span>Number</span> <span>{{element.data?.award?.number}}</span></li>
-                <li><span>CLIN</span> <span>{{element.data?.award?.lineItemNumber}}</span></li>
+                <li><span>CLIN</span> 
+                  <span>
+                    {{element.data?.award?.lineItemNumber}}
+                    <ng-container *ngIf="!element.data?.award?.lineItemNumber">
+                      &mdash;
+                    </ng-container>
+                  </span>
+                </li>
               </ul>
             </div>
           </div>
@@ -419,45 +433,6 @@
 
       </div>
 
-    </div>
-
-    <div class="card">
-      <div class="card-header-secure">
-        <h3>
-          Triman Industries Inc 1042 Industrial Dr West Berlin 08091-9164 US
-        </h3>
-      </div>
-      <div class="card-secure-content">
-        <div class="usa-grid-full">
-          <div class="usa-width-one-half">
-            <strong>Contractor Information</strong>
-            <ul class="usa-label-list">
-              <li><span>DUNS</span> <span>966423352</span></li>
-              <li><span>Address</span>
-                  <span>
-                    574 Merry Way<br>
-                    Sterling, Georgia 20176<br>
-                    United States
-                  </span>
-              </li>
-            </ul>
-          </div>
-          <div class="usa-width-one-half">
-            <strong>Contract Information</strong>
-            <ul class="usa-label-list">
-              <li><span>Amount</span> <span>$250,000</span></li>
-              <li><span>Number</span> <span>SPE4A617V2333</span></li>
-              <li><span>CLIN</span> <span>0001</span></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="card-extra-content">
-        <div class="label-container-inline">
-          <i class="fa fa-calendar-check-o" aria-hidden="true"></i>
-          Contract Award Date: <strong>November 4, 2016</strong>
-        </div>
-      </div>
     </div>
 
     <br><br>
