--- a/src/styles/pages/_opportunity.scss
+++ b/src/styles/pages/_opportunity.scss
@@ -1,4 +1,4 @@
-.opportunity-page {
+.opportunity-page, .featured-result {
   h1{
     margin-top: 50px !important;
   }
@@ -10,6 +10,9 @@
     margin-bottom: 0;
   }
 
+  .card h3 a{
+    text-decoration: none;
+  }
   /* Propose new font weight */
   /*.card strong,
   .card h3{
