--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -122,6 +122,7 @@ hr {
   width: 44px;
   display: inline-block;
   background-color: transparent;
+  text-align: center;
 
   &:hover {
     cursor: pointer;
