--- a/src/app/alerts/alert-edit/alert-edit.template.html
+++ b/src/app/alerts/alert-edit/alert-edit.template.html
@@ -6,13 +6,14 @@
   </h2>
   <div class="usa-grid-full">
     <div class="usa-width-one-half">
-      <samSelect [options]="typeOptions" [name]="'alert-types'" [label]="'Type'" [model]="alert.severity()" (modelChange)="onSeverityChange($event)"></samSelect>
+      <samSelect class='severity-select' [options]="typeOptions" [name]="'alert-types'" [label]="'Type'" [model]="alert.severity()" (modelChange)="onSeverityChange($event)"></samSelect>
       <samText [name]="'title-input'" [ngModel]="alert.title()" [label]="'Title'" (ngModelChange)="onTitleChange($event)"></samText>
       <samTextarea [name]="'description-input'" [ngModel]="alert.description()" [label]="'Description'" (ngModelChange)="onDescriptionChange($event)"></samTextarea>
     </div>
     <div class="usa-width-one-half">
       <samDateEntry class='publish-date' [name]="'publish-date'" [label]="'Publish Date'"></samDateEntry>
       <samDateEntry [name]="'end-date'" [label]="'End Date'"></samDateEntry>
+      <samSelect [options]="statusOptions" [name]="'status'" [label]="'Status'" [model]="status()"></samSelect>
     </div>
   </div>
   <div class="alert-edit-actions clearfix">
