--- a/src/app/alerts/alert-item/alert-item.template.html
+++ b/src/app/alerts/alert-item/alert-item.template.html
@@ -1,10 +1,17 @@
 <div *ngIf="!isEditing">
   <div>
-    <div class="alert-type-indicator" [ngClass]="alert.colorClass()">
+    <div *ngIf="isDeleting">
+      <div>
+        Please confirm the deletion of this alert:
+        <button class="usa-button usa-button-secondary" (click)="onDeleteConfirmClick()">Delete</button>
+        <button class="usa-button usa-button-unstyled" (click)="onCancelDeleteClick()"><a>Cancel</a></button>
+      </div>
+    </div>
+    <div class="alert-type-indicator pull-left" [ngClass]="alert.colorClass()">
       <i class="alert-type-icon fa" [ngClass]="alert.iconClass()"></i>{{alert.severity()}}
     </div>
     <div class="pull-right">
-      <i class="fa fa-pencil usa-button-icon" (click)="onEditClick()" title="edit"><span class="usa-sr-only">Edit</span></i>
+      <i class="fa fa-gear usa-button-icon" (click)="onEditClick()" title="edit"><span class="usa-sr-only">Edit</span></i>
       <i class="fa fa-trash usa-button-icon" (click)="onDeleteClick()" title="edit"><span class="usa-sr-only">Delete</span></i>
     </div>
   </div>
