--- a/src/styles/pages/_alerts.scss
+++ b/src/styles/pages/_alerts.scss
@@ -35,9 +35,14 @@
     padding-bottom: 12px;
   }
 
-  .alert-block:not(:last-child) {
-    margin-bottom: 12px;
-    border-bottom: 1px solid grey;
+  .alert-block {
+    padding-top: .67em;
+    margin-bottom: .67px;
+    border-top: 1px solid grey;
+
+    &:last-child {
+      border-bottom: 1px solid grey;
+    }
   }
 
   .alert-page-title {
