--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -13,6 +13,7 @@
 
 @import '~uswds/src/stylesheets/uswds';
 
+@import 'components/accordion';
 @import 'components/footer';
 @import 'components/pagination';
 @import 'components/header';
