--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -28,6 +28,7 @@
 @import 'components/alert-item';
 @import 'components/image-library';
 @import 'components/alert-footer';
+@import 'components/tabs';
 
 @import 'pages/assistance-listing';
 @import 'pages/help';
