--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -363,7 +363,7 @@
 
       <samTab *ngIf="relatedOpportunities" tabTitle="Award Notices">
 
-        <h2>Awards Summary</h2>
+        <h2 id="award-summary">Awards Summary</h2>
 
           <div class="card" *ngFor="let element of relatedOpportunities">
 
