--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -365,6 +365,20 @@
 
         <h2>Awards Summary</h2>
 
+        <!-- Awards Metadata -->
+        <div>
+          <div>
+            <strong>Total Amount Awarded</strong><br>
+            ${{relatedOpportunitiesMetadata.totalAwardAmt}}<br>
+            <ng-container *ngIf="relatedOpportunitiesMetadata.unparseableCount">(Plus {{relatedOpportunitiesMetadata.unparseableCount}} other variable amounts)</ng-container>
+          </div>
+
+          <div>
+            <strong>Total Number of Recipients</strong><br>
+            {{relatedOpportunitiesMetadata.recipientCount}}
+          </div>
+        </div>
+
           <div class="card" *ngFor="let element of relatedOpportunities">
 
             <div class="card-header-secure">
