[SAM-1706] Display total award count

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -365,6 +365,14 @@
 
         <h2>Awards Summary</h2>
 
+        <!-- Awards Metadata -->
+        <div>
+          <div>
+            <strong>Total Number of Awards</strong><br>
+            {{relatedOpportunitiesMetadata.count}}
+          </div>
+        </div>
+
           <div class="card" *ngFor="let element of relatedOpportunities">
 
             <div class="card-header-secure">
