--- a/src/styles/pages/_opportunity.scss
+++ b/src/styles/pages/_opportunity.scss
@@ -3,6 +3,18 @@
     margin-top: 50px !important;
   }
 
+  .usa-text-center{
+    text-align: center;
+  }
+
+  /* Segment */
+  /*============================*/
+  .segment{
+    background-color: #f5f5f5;
+    padding:20px 0px;
+    border-radius: 4px;
+  }
+
   /* Card */
   /*============================*/
   .card h3{
