[SAM-2648] Fix typo unparseable -> unparsable

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -370,7 +370,7 @@
           <div>
             <strong>Total Amount Awarded</strong><br>
             {{relatedOpportunitiesMetadata.totalAwardAmt | currency:'USD':true:'1.2-2'}}<br>
-            <ng-container *ngIf="relatedOpportunitiesMetadata.unparseableCount">(Plus {{relatedOpportunitiesMetadata.unparseableCount}} other variable amounts)</ng-container>
+            <ng-container *ngIf="relatedOpportunitiesMetadata.unparsableCount > 0">(Plus {{relatedOpportunitiesMetadata.unparsableCount}} other variable amounts)</ng-container>
           </div>
 
           <div>
